[project]
name = "gen-mod-omr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.0",
    "equinox>=0.11.10",
    "jax>=0.4.37",
    "jaxlib>=0.4.36",
    "jaxtyping>=0.2.36",
    "optax>=0.2.4",
    "plotille>=5.0.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.2",
]

[tool.uv]
dev-dependencies = ["ruff>=0.8.3"]

[tool.ruff]
ignore = ["F722"]
