[project]
name = "gen-mod-omr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pip>=24.3.1",
    "einops>=0.8.0",
    "equinox>=0.11.10",
    "jaxtyping>=0.2.36",
    "matplotlib>=3.10.0",
    "optax>=0.2.4",
    "plotille>=5.0.0",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.2",
    "wandb>=0.19.1",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = ["ruff>=0.8.3"]

[tool.ruff]
ignore = ["F722"]
